# Advanced-Code

./: .gitignore  practice.txt
R/basicLogic/: dataHandling.R  test.r
c++/: a.out
c++/basicLogic/: CMakeLists.txt  simple_hand_gesture.cpp
c++/dsa2/: a.out  bubbleSort.cpp  insertionSort.cpp  power0f2withoutloop.cpp  selectionSort.cpp
c++/mathsNplot/: Makefile  eigen1st.cpp  main.cpp
c++/rough/: a.out  erase.cpp  test1.cpp  test12.cpp
dev/: coursera.html  coursera.js
java/: ATMSystem.java  bank.java  rough.java
java/PLA/: assig1Q1.java  assig1Q2.java  assig1Q3.java  class1a.java  class1aa.java  class1b.java  class2a.java  class3a.java  class3b.java  class4a.java  class5a.java  class6a.java  class6b.java  class7a.java  class7b.java  class8a.java  class8b.java  class8c.java  class91a.java  class91b.java  class91c.java  class91d.java  class9a.java  limitANumberTo2Decimal.java
py/basicLogic/: sqlp1.py
py/rough/: app.py  app1.py  erase.py  erase3.py  googleapi.py  test1.py
